adding another animation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          type='audio/ogg; codecs=vorbis'>
  
 </audio>
-<button type="button" onclick="aud_play_pause()">Play/Pause</button>
+<button type="button" onclick="aud_play_pause()">Play or Pause</button>
 
  <div class="row">
      <div class="large-5 offset-5 large-centered">
@@ -47,6 +47,8 @@
     <canvas id="c"></canvas>
          </div>
          </div>
+    
+    <div class="element"></div>
     
     <script>
 function aud_play_pause() {
